created pedido doc and marmitacontroller test class